trabalhando com flex-nowrap e flex-wrap com e sem alinhamento

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@ temp/
 # End of https://www.gitignore.io/api/node,intellij,visualstudiocode
 /curso_Bootstrap.iml
 /.idea/
+
+package-lock.json
+my_course_bootstrap.iml
+package-lock.json
